# msc_onlab2

./: .cproject  .gitignore  .project  README.md  default.xml  extrinsics.yml  intrinsics.yml  out_camera_data.xml  stereo_calib.xml
meshing/src/: CMakeLists.txt  downsampling.cpp  feature_matching.cpp  filtering.cpp  merge.cpp  meshing.cpp  texturing.cpp  texturing_one.cpp
reconstruction/: extrinsics.yml  intrinsics.yml
reconstruction/src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Magic.cpp  Magic.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PCDReader.cpp  PCDReader.h  PCDWriter.cpp  PCDWriter.h  PointCloudSegmenter.cpp  PointCloudSegmenter.h  Vector.h  merge_clouds.cpp  reconstruct.cpp  save_images.cpp  stereo_calib.cpp  triangulate.cpp
report/: CMakeLists.txt  beszamolo.tex  onlabmacros.tex  refs.bib
report/figs/: bme_logo.eps  depth.ggb
src/: Camera.h  Canvas.cpp  Canvas.h  Magic.cpp  Magic.h  get_sync_videos.cpp  load_calib.cpp  main.cpp  main.cpp_old  stereo_calib.cpp
